fix: deactivating horizontal scrolling

--- a/style.scss
+++ b/style.scss
@@ -50,6 +50,10 @@ body {
   color: $text-color;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 // Header styling
 
 .header {
